--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 
 ocr.service.url=http://dummy-ocr-service
+
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
