Document Upload + OCR

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ ocr.service.url=http://dummy-ocr-service
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+server.error.include-message=always
+server.error.include-binding-errors=always
