--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,21 @@
 			<version>2.9.0</version>
 		</dependency>
 
+		<!-- ✅ Tesseract OCR Java Wrapper -->
+		<dependency>
+			<groupId>net.sourceforge.tess4j</groupId>
+			<artifactId>tess4j</artifactId>
+			<version>5.4.0</version>
+		</dependency>
+
+		<!-- ✅ PDFBox for rendering PDF pages as images -->
+		<dependency>
+			<groupId>org.apache.pdfbox</groupId>
+			<artifactId>pdfbox</artifactId>
+			<version>2.0.27</version>
+		</dependency>
+
+
 		<!-- ✅ OpenPDF (PDF generation) -->
 		<dependency>
 			<groupId>com.github.librepdf</groupId>
