--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,8 @@ spring.servlet.multipart.max-request-size=10MB
 
 server.error.include-message=always
 server.error.include-binding-errors=always
+
+# Pour afficher les requêtes HTTP et leurs corps
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG
+
